--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,25 +8,25 @@ services:
     depends_on:
       - mosquitto
 
-  servicio-2:
-    build: ./servicio-2/
-    ports:
-      - 8082:8080
-    depends_on:
-      - mosquitto
+  # servicio-2:
+  #   build: ./servicio-2/
+  #   ports:
+  #     - 8082:8080
+  #   depends_on:
+  #     - mosquitto
 
-  servicio-3:
-    build: ./servicio-3/
-    ports:
-      - 8083:8080
-    depends_on:
-      - influx
-      - mysql
+  # servicio-3:
+  #   build: ./servicio-3/
+  #   ports:
+  #     - 8083:8080
+  #   depends_on:
+  #     - influx
+  #     - mysql
 
   mosquitto:
     image: eclipse-mosquitto:2
     ports:
-      - 1883:1883
+      - 3001:3001
     volumes: 
       - ./eclipse-mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
 
