--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3"
 
 services:
-  servicio-1:
-    build: ./servicio-1/
-    ports:
-      - 8081:8080
-    depends_on:
-      - mosquitto
+  # servicio-1:
+  #   build: ./servicio-1/
+  #   ports:
+  #     - 8081:8080
+  #   depends_on:
+  #     - mosquitto
 
   # servicio-2:
   #   build: ./servicio-2/
