--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   servicio-1:
+    container_name: servicio-1
     build: ./servicio-1/
     ports:
       - 8081:8080
@@ -9,6 +10,7 @@ services:
       - mosquitto
 
   servicio-2:
+    container_name: servicio-2
     build: ./servicio-2/
     ports:
       - 8082:8080
@@ -24,6 +26,7 @@ services:
   #     - mysql
 
   mosquitto:
+    container_name: mqtt
     image: eclipse-mosquitto:2
     ports:
       - 3001:3001
@@ -31,6 +34,7 @@ services:
       - ./eclipse-mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
 
   mysql:
+    container_name: mysql
     image: mysql:8
     volumes:
       - mysqldata:/var/lib/mysql
@@ -43,16 +47,19 @@ services:
       - MYSQL_PASSWORD=admin
   
   influx:
-    image: influxdb:alpine
+    container_name: influx
+    image: influxdb:2.1
     volumes:
       - influxdata:/var/lib/influxdb
     ports:
       - 8086:8086
     environment:
-      - DOCKER_INFLUXDB_INIT_USERNAME=admin
-      - DOCKER_INFLUXDB_INIT_PASSWORD=admin
-      - DOCKER_INFLUXDB_INIT_ORG=tecnoandina
-      - DOCKER_INFLUXDB_INIT_BUCKET=system
+      DOCKER_INFLUXDB_INIT_MODE: setup
+      DOCKER_INFLUXDB_INIT_USERNAME: admin
+      DOCKER_INFLUXDB_INIT_PASSWORD: admintooshort
+      DOCKER_INFLUXDB_INIT_ORG: tecnoandina
+      DOCKER_INFLUXDB_INIT_BUCKET: system
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN: my-admin-token
   
 volumes:
   mysqldata:
