--- a/servicio-1/Dockerfile
+++ b/servicio-1/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.8.4-slim-buster
 
 ADD app.py .
 
+RUN pip install --upgrade pip
+
 RUN pip install paho-mqtt
 
 # CMD [ "python","./app.py" ]
