--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
   servicio-3:
     container_name: servicio-3
     build: ./servicio-3/
+    links:
+      - mysql
     ports:
       - 5000:5000
     environment:
@@ -41,10 +43,11 @@ services:
     image: mysql:8
     volumes:
       - mysqldata:/var/lib/mysql
+      - ./db:/docker-entrypoint-initdb.d/:ro
     ports:
       - 3306:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_ROOT_PASSWORD=admin
       - MYSQL_DATABASE=tecnoandina
       - MYSQL_USER=admin
       - MYSQL_PASSWORD=admin
